--- a/escrito/tesis.tex
+++ b/escrito/tesis.tex
@@ -29,6 +29,7 @@
 
 % Configuración de hyperref
 \hypersetup{
+    pdftitle={Desarrollo de un sistema eficiente para el procesamiento de datos experimentales de la carga eléctrica de gotas de lluvia},
     colorlinks=true,
     linkcolor=blue,
     filecolor=magenta,      
@@ -55,37 +56,7 @@
     belowskip=0pt
 }
 
-\begin{filecontents*}{bibliografia.bib}
-    @article{avila2022,
-      author  = {Ávila, Eldo and Martínez, Lucía and Pereyra, Rodolfo and Lang, Timothy and Deierling, Wiebke and Wingo, Matthew and Melo, Gregory and Medina, Bruno},
-      title   = {Measurements of size and electrical charges carried by precipitation particles during RELAMPAGO field campaign},
-      journal = {Earth and Space Science},
-      year    = {2022},
-      volume  = {9},
-      pages   = {e2022EA002407},
-      doi     = {10.1029/2022EA002407}
-    }
-    @article{martinez2023,
-      author  = {Martínez, Lucía B. and Pereyra, Rodolfo G. and Ávila, Eldo E.},
-      title   = {Comparisons of raindrop size distributions measured by an optical disdrometer and electrically charged raindrops},
-      journal = {Journal of Geophysical Research: Atmospheres},
-      year    = {2023},
-      volume  = {128},
-      pages   = {e2022JD038396},
-      doi     = {10.1029/2022JD038396}
-    }
-    @article{pereyra2025,
-      author  = {Pereyra, Rodolfo G. and Martínez, Lucía B. and Ávila, Eldo E.},
-      title   = {New experimental device for measuring electrical charge of precipitation particles},
-      journal = {Atmósfera},
-      year    = {2025},
-      volume  = {39},
-      pages   = {283--295},
-      doi     = {10.20937/ATM.53446}
-    }
-    \end{filecontents*}
-    
-    \addbibresource{bibliografia.bib}
+\addbibresource{bibliografia.bib}
 
 \pagestyle{fancy}
 \pagenumbering{arabic}
@@ -99,6 +70,14 @@
 \newcommand{\subsubsubsection}[1]{\paragraph{#1}\mbox{}\\}
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
+
+% Añadir título meta para navegadores con pdf.js (ejemplo: Chrome)
+\usepackage{etoolbox}
+\AtBeginDocument{%
+  \hypersetup{pdfinfo={
+    Title={Desarrollo de un sistema eficiente para el procesamiento de datos experimentales de la carga eléctrica de gotas de lluvia}
+  }}%
+}
 
 \begin{document}
 \onehalfspacing
